examples/test/testpolicy12308.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12308
  namespace: namespace184
spec:
  podSelector:
    matchLabels:
      key46: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value43
          key22: value27
      podSelector:
        matchLabels:
          key27: value15
          key10: value9
